fix(mobile, desktop): fix overflows (#69)
* fix(mobile, desktop): overflow

--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -5,6 +5,11 @@ body {
     overflow-x: hidden;
 }
 
+.content {
+    padding: 20px;
+    height: calc(99vh - 129px);
+}
+
 nav.sidebar {
     background-color: var(--mantle);
     width: 250px;
@@ -67,17 +72,17 @@ a {
 main {
     flex: 1;
     display: block;
-    padding: 20px;
+    padding: 0;
     background: var(--base);
-    height: 90vh;
+    height: 100%;
     padding-top: 20px;
-
+    overflow-y: scroll;
 }
 
 .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, 210px);
-    margin-bottom: 150px;
+    /* margin-bottom: 150px; */
     gap: 10px;
     margin-left: auto;
     margin-right: auto;
@@ -219,21 +224,20 @@ nav span:not(.material-symbols-rounded) {
     main {
         margin-left: 0;
         padding-bottom: 0;
+        overflow-y: visible;
     }
 
-
+    footer {
+        position: static;
+    }
+    .content {
+        height: auto;
+    }
 }
 
 /* ----small phone---- */
 @media screen and (max-width: 600px) {
     .cards-grid {
         justify-content: center;
-    }
-
-    footer {
-        width: auto;
-        left: 0;
-        bottom: 0;
-        z-index: auto;
     }
 }
